--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@ announcements:
     {% endfor %}
   {% endif %}
 </section>
+
+{% comment %}
+{% include news-header.html %}
+{% endcomment %}
+
 <section>
   {% include latest-news-widget.html %}
   {% include latest-news-modal.html %}
 </section>
+
 {% include events.html %}
 <div class="container">
   <div class="row">
