--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@ announcements:
 
 <section class="position__offset-fixed-nav">
   {% if page.display_announcement == true %}
-    {% for announcement in page.announcements %}
-      {% if forloop.first == true %}
-        {% include announcement.html %}
-      {% endif %}
+    {% for announcement in page.announcements limit: 1 %}
+      {% include announcement.html %}
     {% endfor %}
   {% endif %}
 </section>
