Fix spelling of `container` BS4 class.

--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@ title: Search
 ---
 
 <main class="position__offset-fixed-nav">
-  <div class="conatiner global-nav__search--conatiner">
+  <div class="container global-nav__search--conatiner">
     <div class="row">
       <div class="col">
         <gcse:searchresults-only></gcse:searchresults-only>
