Fix margins after update.

--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,7 @@ title: Archive
 layout: default
 baseurl: ../
 ---
-<section class="archive-post-list position__offset-fixed-nav">
+<section>
   <div class="container">
     <!-- Build -->
     <div class="row">
