--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@ baseurl: ../
 description: ''
 ---
 
-<div class="container position__offset-fixed-nav">
+<div class="container">
   <div class="row">
     <div class="col">
       <section class="latest-news-widget--rollup__section-margin">
