--- a/archive.html
+++ b/archive.html
@@ -8,17 +8,17 @@ baseurl: ../
     <!-- Build -->
     <div class="row">
         <div class="col">
-              {% for post in site.posts %}
-              {% assign currentDate = post.date | date: "%Y" %}
-              {% if currentDate != myDate %}
-                  {% unless forloop.first %}</ul>{% endunless %}
-                  <h2>{{ currentDate }}</h2>
-                  <ul class="archive__list">
-                  {% assign myDate = currentDate %}
-              {% endif %}
-              <li><a href="{{ post.url }}" class="archive__link-item"><span class="archive__post-meta">{{ post.date | date: "%B %-d, %Y" }}</span> - {{ post.title }}</a></li>
-              {% if forloop.last %}</ul>{% endif %}
-          {% endfor %}
+          {%- for post in site.posts -%}
+          {%- assign currentDate = post.date | date: "%Y" -%}
+          {%- if currentDate != myDate -%}
+          {%- unless forloop.first -%}</ul>{%- endunless -%}
+          <h2>{{ currentDate }}</h2>
+          <ul class="archive__list">
+          {%- assign myDate = currentDate -%}
+          {%- endif -%}
+            <li><a href="{{ post.url }}" class="archive__link-item"><span class="archive__post-meta">{{ post.date | date: "%B %-d, %Y" }}</span> - {{ post.title }}</a></li>
+          {%- if forloop.last -%}</ul>{%- endif -%}
+          {%- endfor -%}
         </div>
       </div>
         <div class="row">
