Upgrade to BS5, cleanup project, convert $ to vanilla...
* Upgrade project to Bootstrap 5 and new gem theme.
* Cleanup unused JS and CSS.
* Switch static JS imports to dynamic imports.
* Convert jQuery vanilla JS:
  * [TODO]: Convert `assets/js/src/newsWidget.js` to
    vanilla JS.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ homepage: true
 baseurl: ''
 title: Newsroom
 description: ''
+slides: true
 ---
 
 <section>
@@ -21,7 +22,7 @@ description: ''
     <div class="col-lg-6 positioning__heading-margin-bottom">
       <h3 class="typography__upcoming-events"><span class="events__bottom-underline">Social Media</span></h3>
     </div>
-    <div class="col-lg-6 position__heading-margin-bottom ml-auto">
+    <div class="col-lg-6 position__heading-margin-bottom ms-auto">
       {% include social-icons.html %}
     </div>
   </div>
