--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: default-core
 homepage: true
-baseurl: ''
-title: Newsroom
+baseurl: ./
+title: Home
 description: ''
 ---
 
